--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,134 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: rgba(208, 208, 208, 0.3);
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100vh;
+}
+
+.form-container {
+  width: 100vw;
+  height: 100vh;
+}
+
+.headder {
+  background-color: rgb(110, 0, 0);
+  color: white;
+  padding: 12px;
+}
+
+.body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+}
+
+select,
+input,
+textarea {
+  padding: 12px;
+  margin: 23px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid black;
+  outline: none;
+  font-size: 19px;
+}
+
+textarea {
+  border: 2px solid black;
+}
+
+.container {
+  font-size: 19px;
+  width: 50vw;
+}
+
+button {
+  background-color: rgb(110, 0, 0);
+  padding: 8px 12px;
+  margin: 0 12px;
+  border: none;
+  border-radius: 12px;
+  font-size: 19px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.top-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.f-d-column {
+  flex-direction: column;
+}
+
+.bottom-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.center {
+  align-items: center;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+}
+
+hr {
+  width: 20%;
+}
+
+.middle-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.border-bottom {
+  border-bottom: 1px solid black;
+  width: 20vw;
+}
+
+table {
+  width: 90vw;
+  font-size: 18px;
+  padding: 12px;
+  border: 1px solid black;
+  border-radius: 12px;
+}
+
+th {
+  background-color: rgb(110, 0, 0);
+  color: white;
+  border-radius: 12px;
+}
+td,
+th {
+  padding: 6px;
+  border-right: 1px solid black;
+}
+
+.comment {
+  overflow-y: scroll;
+  max-width: 23vw;
+  max-height: 23vh;
+  word-wrap: normal;
 }
